@@ -30,7 +30,7 @@ data.table(..., keep.rownames=FALSE, check.names=TRUE, key=NULL)
   \item{check.names}{ Just as \code{check.names} in \code{\link{data.frame}}.
 
 }
-  \item{key}{ Character vector of length 1 containing one or more column names separated by comma which is passed to \code{\link{setkey}}.
+  \item{key}{ Character vector of one or more column names which is passed to \code{\link{setkey}}. It be a single comma separated string such as \code{key="x,y,z"}, or a vector of names such as \code{key=c("x","y","z")}. 
 
 }
   \item{x}{ A \code{data.table}.
